- english.lng / german.lng / Polski.lng: updated, cleaned up - JDLowSpeed: Alte JDLocale.L()-Aufrufe entfernt

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -1,10 +1,7 @@
 $translater$ = JD-Team
 $version$ = $Revision$
 addons.jdgrowlnotification.menu = Growl Messages
-addons.jdlowspeed.statusmessage.disabled = Disable Low Speeddetection
-addons.jdlowspeed.statusmessage.enabled = Enable lowspeed detection
 addons.jdshutdown.menu = Shutdown after downloads finished
-addons.jdshutdown.run = Shutdown now
 addons.jdshutdown.statusmessage.disabled = The System will NOT be shut down by JDownloader
 addons.jdshutdown.statusmessage.enabled = JDownloader will shut down your System after downloads finished
 addons.schedule.menu.add = Add
@@ -87,6 +84,7 @@ exceptions.browserexception.rangeerror = Chunkload error
 exceptions.browserexception.redirecterror = Unexpected chunkcopy error: Redirect
 gui.accountcheck.pluginerror = Plugin %s may be defect. Inform support!
 gui.askname = What's your name?
+gui.btn_abort = Abort
 gui.btn_add = Add
 gui.btn_cancel = Cancel
 gui.btn_cancelcountdown = Stop Countdown
@@ -175,6 +173,7 @@ gui.config.fengshui.settings = Settings
 gui.config.fengshui.title = Feng Shui Config
 gui.config.general.changelog.auto = Open Changelog after update
 gui.config.general.createsubfolders = Create sub-folder including package name (if possible)
+gui.config.general.createsubfoldersbefore = Create sub-folders after adding links
 gui.config.general.downloaddirectory = Download directory
 gui.config.general.filelogger = Create logfile in ./logs/ directory
 gui.config.general.loggerlevel = Logging level
@@ -193,6 +192,7 @@ gui.config.gui.custom_browser = Browserpath
 gui.config.gui.custom_browser_param = Parameter %url (one parameter per line)
 gui.config.gui.disabledialogs = Disable affirmation dialogs
 gui.config.gui.disabletooltipps = Disable tooltipps from the download treetable
+gui.config.gui.doubeclick = Double click to expand/collapse Packages
 gui.config.gui.ext = Advanced
 gui.config.gui.language = Language
 gui.config.gui.languagefileinfo = Current Language File: %s from %s in version %s
@@ -200,6 +200,8 @@ gui.config.gui.linkgrabber.onlinecheck = Link Grabber: Link status (available)
 gui.config.gui.look.tab = Look & Feel
 gui.config.gui.plaf = Style (restart to apply)
 gui.config.gui.premiumconfigfilednum = How many Premiumaccount fields should be displayed (Restart required)
+gui.config.gui.reg_protocols = Link ccf/dlc/rsdf to JDownloader
+gui.config.gui.show_speed_graph = Display speedmeter graph
 gui.config.gui.showsplash = Show splash screen on program startup
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Test browser
@@ -207,7 +209,6 @@ gui.config.gui.testbrowser.error = Browser launcher failed: %s
 gui.config.gui.testbrowser.message = JDownloader now tries to open http://jdownloader.org in your browser.
 gui.config.gui.theme = Theme
 gui.config.gui.use_custom_browser = Use custom browser
-gui.config.gui.usetwitter = Load & display Twitter messages
 gui.config.hjsplit.overwrite = Overwrite existing files
 gui.config.hjsplit.remove_merged = Delete archive after merging
 gui.config.jac.column.method = Method
@@ -235,13 +236,9 @@ gui.config.liveheader.selectrouter = Select Router
 gui.config.liveheader.user = Login
 gui.config.liveheader.waitforip = Wait for new IP (sec)
 gui.config.liveheader.waittimeforipcheck = Firs IP check timeout (sec)
-gui.config.liveheader.warning.experimental = Do you want to test experimental Router reconnect methods?\r\n Please not that those methods can change some of your router settings!
 gui.config.liveheader.warning.nocurlconvert = JD can't convert the CURL script. Please ask the JD-Support-Team for support!
 gui.config.liveheader.warning.notfound = jDownloader can't detect your router settings.
 gui.config.liveheader.warning.upnpinactive = Please activate Upnp support in your router's network configuration. <br><a href=\"http://%s\">Go to Router</a><br><a href=\"http://jdownloader.org/knowledge/wiki/reconnect/upnp\">Wiki article: Upnp in Router</a><br>Click OK when you activate Upnp support in router or Cancel to skip.
-gui.config.liveheader.warning.wizard = The settings search can take a while. Please enter your router login data. Execute now?
-gui.config.liveheader.warning.wizard.checkall = Check all routers (very slow)
-gui.config.liveheader.warning.wizard.title = Start automatic router-detection now?
 gui.config.liveheader.warning.yourrouter = You have a
 gui.config.packagemanager.column_category = Category
 gui.config.packagemanager.column_info = Info.
@@ -269,6 +266,7 @@ gui.config.reloadcontainer = Reload Download Container
 gui.config.routeripfinder = Router IP-Search
 gui.config.routeripfinder.close = Close Window
 gui.config.routeripfinder.featchip = Detecting your router's IP
+gui.config.routeripfinder.notfound = Can't find your routers hostname
 gui.config.routeripfinder.ready = IP found: %s
 gui.config.showcontaineronloadinfo = Show detailed containerinformation on load
 gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.org/knowledge/wiki/start
@@ -307,7 +305,6 @@ gui.dialog.about.member = Member
 gui.dialog.about.section = Section
 gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_en.html
 gui.dialog.about.title = About JDownloader
-gui.dialog.about.whatisjd = What is jDownloader?
 gui.dialogs.agb_tos.agbaccepted = I accept the terms of service
 gui.dialogs.agb_tos.description = The TOCs of %s have not been read and accepted.
 gui.dialogs.agb_tos.readagb = Read %s's TOCs
@@ -340,6 +337,7 @@ gui.downloadlist.tooltip.partsfailed = Incorrect:
 gui.downloadlist.tooltip.partsfinished = Finished:
 gui.downloadlist.tooltip.simultan_downloads = Max. simultan downloads:
 gui.droptarget.downloadsadded = Downloads added:
+gui.droptarget.grabbed = Grabbed:
 gui.droptarget.label = Drop links here!
 gui.droptarget.title = Link Collector
 gui.fengshuiconfig.general.tooltip = <html>You can set the Downloadpath and the language here
@@ -412,10 +410,12 @@ gui.linkinfo.download.activated = is activated
 gui.linkinfo.download.deactivated = is deactived
 gui.linkinfo.download.notunderway = is not in process
 gui.linkinfo.download.underway = is in process
+gui.linkinfo.downloadstatus = Download status
 gui.linkinfo.file = File
 gui.linkinfo.filesize = Filesize
 gui.linkinfo.package = Package
 gui.linkinfo.password = Password
+gui.linkinfo.pwdl = Password for download
 gui.linkinfo.rate = Refreshrate
 gui.linkinfo.saveto = Save to
 gui.linkinfo.speed = Speed
@@ -423,6 +423,7 @@ gui.linkinfo.title = Link Information:
 gui.linkinfo.waittime = Waittime
 gui.linklist.editpackagename.message = New Packagename
 gui.linklist.newpackage.message = Name of the new package
+gui.linklist.setpw.message = Set download password
 gui.linklist.status.doresume = Wait to resume
 gui.logdialog.btn_uploadlog = Upload Log
 gui.logdialog.loglink = Log-Link (click ok to open)
@@ -557,6 +558,7 @@ gui.menu.remove = Remove
 gui.messages.outofmemoryerror = An error ocured!\r\nJDownloader is out of memory. Restart recommended.\r\nPlease report this bug!
 gui.packageinfo.comment = Comment
 gui.packageinfo.dldirectory = Downloaddirectory
+gui.packageinfo.extractafter = Autoextract
 gui.packageinfo.links = Links
 gui.packageinfo.loaded = Loaded
 gui.packageinfo.name = Name
@@ -597,8 +599,10 @@ gui.table.contextmenu.info = Details
 gui.table.contextmenu.newpackage = Move in new package
 gui.table.contextmenu.packagesort = Sort Packages
 gui.table.contextmenu.packagesubmenu = Package
+gui.table.contextmenu.priority = Priority
 gui.table.contextmenu.reset = Reset
 gui.table.contextmenu.resume = Resume
+gui.table.contextmenu.setdlpw = Set download password
 gui.table.draganddrop.after = Drop after '%s'
 gui.table.draganddrop.before = Drop before '%s'
 gui.table.draganddrop.insertinpackageend = Insert at the beginning of package '%s'
@@ -642,11 +646,11 @@ init.webupdate.progress.0_title = Web-Update
 init.webupdate.progress.1_title = Update check
 installer.abortinstallation = Error. abort installation
 installer.error.nowriterights = Error. You do not have permissions to write to the dir
+installer.refused = Your connection got refused. It seems that any security software (e.g. firewalls) block JD. See http://jdownloader.org/knowledge/wiki/faq.
 installer.welcome = Welcome to JDownloader. The setup program will download some files.
 interaction.batchreconnect.batch = Batch Script
 interaction.batchreconnect.dooutput = Write result to a log file
 interaction.batchreconnect.executein = Start in (application folder)
-interaction.batchreconnect.name = Batch Reconnect
 interaction.batchreconnect.progress.0_title = Batch Reconnect
 interaction.batchreconnect.progress.1_retries = Batch Reconnect #
 interaction.batchreconnect.progress.2_oldip = Batch Reconnect Old IP:
@@ -771,7 +775,6 @@ main.start.logwarning.body = ATTENTION. Your Loglevel is set to %s and the Logfi
 main.start.logwarning.title = Logwarning
 main.status.active = on
 main.status.inactive = off
-main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://jdownloader.org/knowledge/wiki/start
 modules.packagemanager.downloadednewpackage.title2 = <p>Updates loaded. A JD restart is required.<br/> RESTART NOW?<hr>%s</p>
 modules.packagemanager.packagename = JD-Update
@@ -784,8 +787,10 @@ modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
 plugin.optional.jdchat.teamviewer.yourtvdata = Your Teamviewer logins:
 plugin.rapidshare.error.accountnotfound = Your Premium Account has not been found.
+plugin.rapidshare.error.filetolarge = This file is larger than 200 MB, you need a premium-account to download this file.
 plugin.rapidshare.error.fraud = Fraud detected: This Account has been illegally used by several users.
 plugin.rapidshare.error.limitexeeded = You have exceeded the download limit.
+plugin.rapidshare.error.serverunavailable = The Server %s is currently unavailable.
 plugin.rapidshare.tickettime = Wait %s min. for ticket
 plugin.serienjunkies.archiveincomplete = Archiv not complete or not online
 plugin.serienjunkies.pageerror = No Links from SJ
@@ -802,6 +807,7 @@ plugins.container.exit.error = Container error: %s
 plugins.container.found = Process %s links
 plugins.container.open = Open Container
 plugins.decrypt.brazil-series.com1 = Download-Format: Only AVI without subtitle
+plugins.decrypt.charts4you.captcha = Please click on the Circle with a gap
 plugins.decrypt.cryptitcom.password = Folder is password protected. Enter password:
 plugins.decrypt.general.captchacodewrong = Wrong captcha code
 plugins.decrypt.general.hosterselection = Hoster selection
@@ -809,7 +815,6 @@ plugins.decrypt.gwarezcc.preferdlc = Prefer DLC Container
 plugins.decrypt.linkbankeu = Check Mirror Links
 plugins.decrypt.myspacecom0 = Load all downloads into 'myspace.com/'
 plugins.decrypt.myspacecom1 = Create a subfolder for each artist
-plugins.decrypt.myspacecom2 = Put the myspace username as prefix to the filename of all downloads
 plugins.decrypt.rslayer.captchaexpired = Captcha code to old.
 plugins.decrypt.serienjunkies.automaticmirrormanagment = automatic mirror managment
 plugins.decrypt.serienjunkies.mirrormanagement = mirror management
@@ -818,19 +823,18 @@ plugins.decrypt.serienjunkies.usepremiumlinks = use premiumlinks if possible
 plugins.decrypt.speedysharecom.password = Enter Password:
 plugins.decrypt.stealthto.captcha = Please click on the Circle with a gap
 plugins.error.downloadfailed = Download failed
+plugins.errors.disconnect = Disconnect?
 plugins.errors.error = Error: 
+plugins.errors.hosteroffline = Hoster offline?
+plugins.errors.nointernetconn = No Internet connection?
 plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
 plugins.host.dosyakaydet.breakcaptcha = Waiting for OCR
-plugins.host.enterlinkpassword = Please enter Linkpassword
-plugins.host.fastload.browsererror = Could not open the Link in Browser
-plugins.host.fastload.errors = Browserlauncher missconfigured
-plugins.host.fastload.info = You try to download for the very first time from fast-load.net.\r\nThis plugin has some specials: To download you have to enter a captcha in browser.\r\nJD will now open an info URL
-plugins.host.fastload.prepare = Wait for linkconfirmation
 plugins.host.meinupload.serverdefect = Service not available
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
+plugins.host.premium.info.expired = The account for '%s' is expired! Please extend the account or buy a new one!\r\n%s
 plugins.host.premium.info.files = Files
 plugins.host.premium.info.notvalid = The account for '%s' isn't valid! Please check username and password!\r\n%s
 plugins.host.premium.info.premiumpoints = PremiumPoints
@@ -841,34 +845,35 @@ plugins.host.premium.info.trafficshareleft = Traffic Share left
 plugins.host.premium.info.usedspace = Used Space
 plugins.host.premium.info.validuntil = Valid until
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Downloadsession expired. Try again.
+plugins.host.rapidshare.errors.15fb70be386bb33e91b8e31b3b94c021 = File not found. Please check your downloadlink.
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = File not found. Please check your downloadlink.
+plugins.host.rapidshare.errors.6b973d801c521a179cc63a4b830314d3 = TOC violation. File removed by rapidshare.
 plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = The server, the file is stored on, is offline. Try again later.
 plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = You have reached your limit for today.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = This file seems to be illegal and is locked. Downloading this file is prohibited by Rapidshare.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limit reached.
-plugins.host.rapidshare.errors.15fb70be386bb33e91b8e31b3b94c021 = File not found. Please check your downloadlink.
-plugins.host.rapidshare.errors.6b973d801c521a179cc63a4b830314d3 = TOC violation. File removed by rapidshare.
+plugins.host.rapidshare.speedtest = SpeedTest
+plugins.host.rapidshare.speedtest.link = Enter a Rapidshare.com Link
 plugins.host.server.unavailable = Servererror
 plugins.host.sharebaseto.servererror = Service not available
 plugins.host.xup = Password wrong
 plugins.hoster.error.agb = TOC not signed
-plugins.hoster.fastload.bypassapi = API Bypass
 plugins.hoster.general.passwordprotectedinput = Links are protected: Enter password:
+plugins.hoster.letitbitnet.errors.countryblock = Letitbit forbidden downloading this file in your country
 plugins.hoster.passquestion = Link '%s' is passwordprotected. Enter password:
 plugins.hoster.premium.status_ok = Account is ok
 plugins.hoster.premiumtab = Premium settings
 plugins.hoster.rapidshare.com.increasetickettime = Increase ticket time (0%-500%)
-plugins.hoster.rapidshare.com.info.title = Account info for %s
-plugins.hoster.rapidshare.com.loadinfo = Load Rapidshare.com account information:
 plugins.hoster.rapidshare.com.prefferedserver = Preferred server (*1)
 plugins.hoster.rapidshare.com.prefferedserver.random = Random
 plugins.hoster.rapidshare.com.preselection = Accept pre-selection (*2)
 plugins.hoster.rapidshare.com.telekom = Use Telekom server if avaiable*
 plugins.hoster.uploadedto.chunks = Premium connections # (>1 causes higher traffic)
+plugins.hoster.uploaderpl.accountexpired = Account expired
+plugins.hoster.uploaderpl.freememberacc = Free registered user account
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Configuration
 plugins.menu.enable_premium = Enable Account
-plugins.menu.fastload_refresh = Refresh all Tickets
 plugins.menu.noaccountsyet = No accounts yet
 plugins.menu.premiuminfo = Get Accountinfo
 plugins.netload.downloadpassword_question = Password protected. Enter Password for %s
@@ -1052,6 +1057,7 @@ plugins.optional.premiumcollector.fetchaccounts = Fetch Accounts
 plugins.optional.premiumcollector.inserted = Successfully inserted %s accounts!
 plugins.optional.premiumcollector.name = PremiumCollector
 plugins.optional.premiumcollector.onlyvalid = Accept only valid and non-expired accounts
+plugins.optional.premiumcollector.onlyvalid2 = Remove invalid and expired accounts
 plugins.optional.premiumcollector.overwrite = Automatically overwrite accounts
 plugins.optional.premiumcollector.password = Password
 plugins.optional.premiumcollector.username = Username
@@ -1063,7 +1069,6 @@ plugins.optional.remotecontrol.stopped = stopped.
 plugins.optional.remotecontrol.toggle = Start/Stop RemoteControl
 plugins.optional.streamsharingtool.action.end = Exit
 plugins.optional.streamsharingtool.action.save.dlc.finished = StreamingShare DLC ready 2 use!
-plugins.optional.streamsharingtool.action.start = Start StreamSharing Tool
 plugins.optional.streamsharingtool.action.validate.linksfound = Link(s) found!
 plugins.optional.streamsharingtool.gui.comment.defaultcomment = StreamingShare-DLC
 plugins.optional.streamsharingtool.gui.comment.question = Please enter your desired DLC-Comment:
@@ -1100,7 +1105,6 @@ plugins.optional.trayicon.startorstop = Start/Stop
 plugins.optional.trayicon.stopafter = Stop after this Download
 plugins.optional.trayicon.tooltipp = Tooltip active:
 plugins.optional.trayicon.update = Update
-plugins.optional.webinterface.connections = Max. Connections
 plugins.optional.webinterface.https = Use HTTPS
 plugins.optional.webinterface.loginname = Login Name
 plugins.optional.webinterface.loginpass = Login Password
@@ -1163,11 +1167,9 @@ system.download.errors.linkisblocked = Mirror %s is loading
 system.download.triggerfileexists = If the file already exists:
 system.download.triggerfileexists.overwrite = Overwrite
 system.download.triggerfileexists.skip = Skip Link
-system.update.changelogurl = http://jdownloader.org/changes/index
 system.update.error.message = Installing updates FAILED for this packages:<hr>%s
 system.update.error.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 system.update.message.title = Update to version %s
-system.update.showchangelog = Show all changes
 system.update.showchangelogv2 = What's new?
 system.update.success.message = Installed new updates<hr>%s
 system.update.success.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
@@ -1175,5 +1177,3 @@ train.choose.folder = Select a folder
 train.chooser.title = jDownloader :: TrainAll
 train.method = Select a Captchamethod
 wrapper.webupdate.updatefile = Update plugin %s
-plugin.rapidshare.error.serverunavailable = The Server %s is currently unavailable.
-plugin.rapidshare.error.filetolarge = This file is larger than 200 MB, you need a premium-account to download this file.
